# SysOpy

./: README.md
cw01/zad1/: CMakeLists.txt  library.h
cw01/zad2/: CMakeLists.txt  library.c
cw01/zad3a/: CMakeLists.txt  zad2dll.c
cw01/zad3b/: CMakeLists.txt  zad2.c  zad2dll.c
cw02/zad1/: main.c  wyniki.txt
cw02/zad2/: main.c  nftw.c
cw03/zad1/: CMakeLists.txt  main.c
cw03/zad2/: CMakeLists.txt  break.c  main.c  pol2
cw03/zad3/: CMakeLists.txt  inf.c  main.c  mem.c  pol3
cw04/: cw04Topic
cw04/zad1/: CMakeLists.txt  dates  main.c  main2.c
cw04/zad2/: CMakeLists.txt  child.c  main.c
cw04/zad3/: CMakeLists.txt  zad3.c
cw05/: cw05Topic
cw05/zad1/: CMakeLists.txt  main2.c  pol
cw05/zad2/: CMakeLists.txt  master.c  slave.c
cw06/: cw06Topic
cw06/zad1/: CMakeLists.txt  client.c  msglib.h  server.c
cw06/zad2/: CMakeLists.txt  client.c  posix.h  server.c
cw07/: cw07Topic
cw07/zad1/: CMakeLists.txt  barber.c  client.c
cw07/zad2/: CMakeLists.txt  barber.c  client.c  ipcutil.h
cw08/: cw08topic
cw08/zad1/: CMakeLists.txt  filter_generator.c  main.c
cw08/zad1/Examples/: 15out  3out  40out  65out  f15  f3  f40  f65
cw09/: cw09Topic
cw09/zad1/: CMakeLists.txt  config  mutex.c
cw09/zad2/: CMakeLists.txt  config  posix.c
cw10/: CMakeLists.txt  cw10Topic
cw10/zad1/: CMakeLists.txt  calc.c  calc.h  client.c  server.c
cw10/zad2/: CMakeLists.txt  calc.c  calc.h  client.c  server.c
